deployment.yaml
apiVersion: v1
kind: Pod
metadata:
  name: badpod01
  namespace: default
  labels:
    app: myapp
spec:
  containers:
  - name: nginx
    image: nginx
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod01
  namespace: foo
  labels:
    app: myapp
spec:
  containers:
  - name: nginx
    image: nginx:1.19

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bad-nginx-deployment
  labels:
    app: web
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  template:
    metadata:
      labels:
        app: busybox
    spec:
      containers:
      - image: busybox
        name: busybox
        command: ["sleep", "9999"]

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: good-nginx-deployment
  labels:
    app: web
  namespace: foo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  template:
    metadata:
      labels:
        app: busybox
    spec:
      containers:
      - image: busybox:1.28
        name: busybox
        command: ["sleep", "9999"]

---
apiVersion: v1
kind: Pod
metadata:
  name: badpod01
spec:
  containers:
  - name: nginx
    image: nginx:1.12
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod02
  labels:
    my.io/foo: bar
spec:
  containers:
  - name: nginx
    image: nginx:1.12
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod01
  labels:
    app.kubernetes.io/name: nginx
spec:
  containers:
  - name: nginx
    image: nginx:1.12
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod02
  labels:
    foo: bar
    app.kubernetes.io/name: nginx
spec:
  containers:
  - name: nginx
    image: nginx:1.12


#### Restrict image registries ###
---

apiVersion: v1
kind: Pod
metadata:
  name: badpod01
spec:
  containers:
  - name: k8s-nginx
    image: registry.k8s.io/nginx:1.7.9
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod02
spec:
  containers:
  - name: k8s-nginx
    image: registry.k8s.io/nginx:1.7.9
  - name: busybox
    image: bar.io/busybox
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod03
spec:
  containers:
  - name: k8s-nginx
    image: registry.k8s.io/nginx:1.7.9
  - name: busybox
    image: eu.foo.io/busybox
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod04
spec:
  containers:
  - name: k8s-nginx
    image: nginx
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod01
spec:
  containers:
  - name: k8s-nginx
    image: eu.foo.io/nginx
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod02
spec:
  containers:
  - name: k8s-nginx
    image: bar.io/nginx
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod03
spec:
  containers:
  - name: k8s-nginx
    image: aws_account_id.dkr.ecr.region.amazonaws.com/nginx
  - name: busybox
    image: docker.io/devopscalvine/busybox
